# rust-sample-weather-forecast

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  rust.yml
src/: controller.rs  error.rs  main.rs  model.rs
src/controllers/: mod.rs  stats.rs  weather.rs
src/models/: error.rs  geo.rs  mod.rs  stat.rs  weather.rs
templates/: index.html  stats.html  weather.html
